# displaypi

./: .gitignore  Dockerfile  README.md  apt-packages.pi.txt  config.py  convert.py  data.py  date.py  display_image.py  entrypoint.sh  errors.py  justfile  main.py  overview.sh  package-lock.json  pyproject.toml  requirements.laptop.txt  requirements.pi.txt  requirements.txt  reset.py  run-docker.sh  tasks.py  weather.py
assets/json/: date.json  tasks.json  weather.json
dashboard-page/: index.html  package-lock.json  package.json  vite.config.js
dashboard-page/src/: App.jsx  StyledText.jsx  WeatherTemperatureChart.jsx  index.css
dashboard-page/src/components/: AniversaryView.jsx  DateHeaderView.jsx  TaskView.jsx  TrashView.jsx  WeatherView.jsx
dashboard-ui/: index.html  package-lock.json  package.json
dashboard-ui/src/: App.jsx  index.css
data/: date.json  tasks.json  weather.json
scripts/: dashboard-evening.sh  dashboard-morning.sh  nasa.sh  private-image.sh
utils/: api.py  convert_image.py  dashboard_export.py  data.py  display_image.py  parse_tasks.py  parsers.py  require_assets.py  reset.py  retry.py  smart_image_rotate.py
