[project]
name = "displaypi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gpiozero>=2.0.1",
    "lgpio>=0.2.2.0",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "rpi-lgpio>=0.6",
    "waveshare-epaper>=1.4.0",
]
